add basic functionals

--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "at.xrocket.sdk",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AltairInglorious/at.xrocket.sdk.git"
   },
   "scripts": {
-    "biome:format": "bunx @biomejs/biome format ./src --write",
-    "biome:lint": "bunx @biomejs/biome lint ./src",
-    "biome:check": "bunx @biomejs/biome check --apply ./src",
+    "lint": "bunx @biomejs/biome check --apply ./src",
     "prepublishOnly": "npx tsc"
   },
   "author": "",
@@ -17,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/node": "^20.12.12",
+    "axios": "^1.7.2",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
